--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avilio</title>
+    <title>Alivio</title>
   </head>
-  <header></header>
-  <body></body>
+  <body>
+    <header class="site-header">
+      <a href="index.html"><img src="./images/logo-img.png" alt="Logo" /></a>
+      <nav>
+        <ul>
+          <li>
+            <a href="#" target="_blank">Why Alivio</a>
+          </li>
+          <li>
+            <a href="#" target="_blank">Solutions</a>
+          </li>
+          <li>
+            <a href="#" target="_blank">Community</a>
+          </li>
+          <li>
+            <a href="#" target="_blank">Pricing</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
