--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Alivio</title>
   </head>
   <body>
@@ -24,6 +25,84 @@
           </li>
         </ul>
       </nav>
+      <button>Sign in</button>
+      <button>Start Trial</button>
     </header>
+    <main>
+      <section>
+        <h1>Be aware, Manage well.</h1>
+        <p>
+          Everyone experiences stress in different ways. Let Alivio guide you,
+          in a personalized journal experience, to overcome your stress.
+        </p>
+        <button>Find Your Way</button>
+      </section>
+      <section>
+        <p>How it works</p>
+        <h2>Understand & Release the stress in 3 steps</h2>
+        <p>
+          Alivio offers as many journals it takes, tackling different areas such
+          as anxiety, overwhelmedness, sadness, or anger, and a variety of
+          personal causes, to help you become aware of your emotions, and guide
+          you in how to manage stress.
+        </p>
+        <ul>
+          <li>
+            <img src="./images/01-img.png" alt="01" />
+            <h2>Personalize</h2>
+            <p>
+              Answer a quick survey about how you express yourself, what causes
+              you stress, and what area would you like to work on. This way, we
+              can fully personalize your journal!
+            </p>
+            <img src="./images/macbook-img.jpg" alt="Macbook" />
+          </li>
+          <li>
+            <img src="./images/02-img.png" alt="02" />
+            <h2>Write & Understand</h2>
+            <p>
+              Write, draw, reflect, understand. Alivio will guide you through
+              the prompts and will help you manage your stress!
+            </p>
+            <img src="./images/book.jpg" alt="Book" />
+          </li>
+          <li>
+            <img src="./images/03-img.png" alt="03" />
+            <h2>Alivio!</h2>
+            <p>
+              Now you are aware, and have a way to manage and overcome your own
+              stress. What are you waiting for? Alivio today!
+            </p>
+            <img src="./images/girl.jpg" alt="girl" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <p>
+          Let's hear about Kayla's success story
+          <span>See how well Alivio works in a real customer’s life. </span>
+        </p>
+        <button>Let’s get started</button>
+        <img src="./images/Video-img.jpg" alt="Video" />
+        <img src="./images/bgirl-img.jpg" alt="Bgirls" />
+        <p>Customized For</p>
+        <img src="./images/avatar-img.png" alt="Avatar" />
+        <p>Mikayla</p>
+        <h2>Your custom contents</h2>
+        <ul>
+          <li>
+            <p>Understand Your Stress</p>
+          </li>
+          <li>Anger Management</li>
+        </ul>
+        <p>Our product</p>
+        <h2>You tell us your stress, We make your diary</h2>
+        <p>
+          Everyone experiences it, and in different ways. Let Alivio guide you,
+          in a personalized journal experience, to overcome your stress.
+        </p>
+        <button>Find Your Way</button>
+      </section>
+    </main>
   </body>
 </html>
