--- a/index.html
+++ b/index.html
@@ -104,5 +104,8 @@
         <button>Find Your Way</button>
       </section>
     </main>
+    <footer>
+      <a href="index.html"><img src="./images/logo-img.png" alt="Logo" /></a>
+    </footer>
   </body>
 </html>
