--- a/index.html
+++ b/index.html
@@ -104,8 +104,20 @@
         <button>Find Your Way</button>
       </section>
     </main>
-    <footer>
+    <footer class="site-footer">
       <a href="index.html"><img src="./images/logo-img.png" alt="Logo" /></a>
+      <ul>
+        <li>
+          <p>Why Alivio</p>
+        </li>
+        <li>
+          <p>Solutions</p>
+        </li>
+        <li>
+          <p>Community</p>
+        </li>
+        <li>Pricing</li>
+      </ul>
     </footer>
   </body>
 </html>
